@@ -55,12 +55,17 @@ our (%REQ, %RESULTS, %PROBES);
 my $QUIET = ($ARGV[0] and $ARGV[0] eq 'QUIET') || $ENV{DEVELOPER};
 shift if $QUIET or $ARGV[0] eq 'STANDARD';
 
+if (-e 'installed.db') {
+    # Grab the data for what's already installed (it's an upgrade).
+    %REQ = %{ do './installed.db' or die "Failed to read installed.db: $!\n" };
+}
+
 # collect data - configuration requirements data go into %REQ,
 # boolean pass/fail go into %RESULTS.
 
 # setup some defaults
-$REQ{DB_TYPE}       = get_default('DB_TYPE')       || 'Pg';
-$REQ{HTTPD_VERSION} = get_default('HTTPD_VERSION') || 'apache';
+$REQ{DB_TYPE}       ||= get_default('DB_TYPE')       || 'Pg';
+$REQ{HTTPD_VERSION} ||= get_default('HTTPD_VERSION') || 'apache';
 
 get_probes();
 
@@ -77,25 +82,29 @@ $RESULTS{APACHE2} = find_apache2() if $REQ{HTTPD_VERSION} eq 'apache2';
 $RESULTS{EXPAT}   = find_expat();
 
 # print error message and fail if something not found
-unless (($RESULTS{PG} or $RESULTS{MYSQL}) and ($RESULTS{APACHE} or $RESULTS{APACHE2})
-          and $RESULTS{EXPAT}) {
-  hard_fail("Required software not found:\n\n",
-            $RESULTS{PG}      ? "" :
+unless (
+    ($RESULTS{PG} or $RESULTS{MYSQL})
+    and ($RESULTS{APACHE} or $RESULTS{APACHE2})
+    and $RESULTS{EXPAT}
+) {
+    hard_fail(
+        "Required software not found:\n\n",
+        $RESULTS{PG}      ? '' :
             "\tPostgreSQL >= 7.3.0       (http://postgresql.org)\n",
-            $RESULTS{MYSQL}   ? "" :
+        $RESULTS{MYSQL}   ? '' :
             "\tMySQL client >= 4.1.0     (http://mysql.com)\n",
-            $RESULTS{APACHE}  ? "" :
+        $RESULTS{APACHE}  ? '' :
             "\tApache >= 1.3.34 && < 2.0 (http://httpd.apache.org)\n",
-            $RESULTS{APACHE2} ? "" :
+        $RESULTS{APACHE2} ? '' :
             "\tApache >= 2.0.55          (http://httpd.apache.org)\n",
-            $RESULTS{EXPAT}   ? "" :
+        $RESULTS{EXPAT}   ? '' :
             "\texpat >= 1.95.0           (http://expat.sourceforge.net)\n",
-            "\nSee INSTALL for details.\n"
-           );
+        "\nSee INSTALL for details.\n"
+    );
 }
 
 # success, write out %REQ hash into required.db
-open(OUT, ">required.db") or die "Unable to open required.db : $!";
+open OUT, '>required.db' or die "Unable to open required.db: $!\n";
 print OUT Data::Dumper->Dump([\%REQ],['REQ']);
 close OUT;
 
@@ -110,10 +119,10 @@ sub find_pg {
     # find PostgreSQL by looking for pg_config.
     my @paths = (split(", ", get_default("PG_CONFIG_PATH")), path);
     foreach my $path (@paths) {
-    if (-e catfile($path, "pg_config")) {
-        $REQ{PG_CONFIG} = catfile($path, "pg_config");
-        last;
-    }
+        if (-e catfile($path, "pg_config")) {
+            $REQ{PG_CONFIG} = catfile($path, "pg_config");
+            last;
+        }
     }
 
     # confirm or deny
@@ -128,24 +137,28 @@ sub find_pg {
             $REQ{PG_CONFIG} = 'NONE';
             ask_confirm("Enter path to pg_config", \$REQ{PG_CONFIG});
         } else {
-            return soft_fail("Failed to find pg_config. Looked in:",
-                             map { "\n\t$_" } @paths);
+            return soft_fail(
+                "Failed to find pg_config. Looked in:",
+                map { "\n\t$_" } @paths
+            );
         }
     }
 
     # check version
     my $version = `$REQ{PG_CONFIG} --version`;
-    return soft_fail("Failed to find PostgreSQL version with ",
-                     "`$REQ{PG_CONFIG} --version`.") unless $version;
+    return soft_fail(
+        "Failed to find PostgreSQL version with ",
+        "`$REQ{PG_CONFIG} --version`."
+    ) unless $version;
     chomp $version;
     my ($x, $y, $z) = $version =~ /(\d+)\.(\d+)(?:\.(\d+))?/;
-    return soft_fail("Failed to parse PostgreSQL version from string ",
-                     "\"$version\".")
-        unless defined $x and defined $y;
+    return soft_fail(
+        qq{Failed to parse PostgreSQL version from string "$version".}
+    ) unless defined $x and defined $y;
     $z ||= 0;
-    return soft_fail("Found old version of Postgres: $x.$y.$z - ",
-                     "7.3.0 or greater required.")
-        unless (($x > 7) or ($x == 7 and $y >= 3));
+    return soft_fail(
+        "Found old version of Postgres: $x.$y.$z - 7.3.0 or greater required."
+    ) unless (($x > 7) or ($x == 7 and $y >= 3));
     print "Found acceptable version of Postgres: $x.$y.$z.\n";
 
     $REQ{PG_VERSION} = [$x,$y,$z];
@@ -159,10 +172,10 @@ sub find_mysql {
     # find MySQL by looking for mysql_config.
     my @paths = (split(", ", get_default("MYSQL_CONFIG_PATH")), path);
     foreach my $path (@paths) {
-    if (-e catfile($path, "mysql_config")) {
-        $REQ{MYSQL_CONFIG} = catfile($path, "mysql_config");
-        last;
-    }
+        if (-e catfile($path, "mysql_config")) {
+            $REQ{MYSQL_CONFIG} = catfile($path, "mysql_config");
+            last;
+        }
     }
 
     # confirm or deny
@@ -173,32 +186,40 @@ sub find_mysql {
         }
     } else {
         print "Failed to find mysql_config.\n";
-        if (ask_yesno("Do you want to provide a path to mysql_config?", 0, $QUIET)) {
+        if (ask_yesno("Do you want to provide a path to mysql_config?", 0, $QUIET)
+        ) {
             $REQ{MYSQL_CONFIG} = 'NONE';
             ask_confirm("Enter path to mysql_config", \$REQ{MYSQL_CONFIG});
         } else {
-            return soft_fail("Failed to find mysql_config. Looked in:",
-                             map { "\n\t$_" } @paths);
+            return soft_fail(
+                "Failed to find mysql_config. Looked in:",
+                map { "\n\t$_" } @paths
+            );
         }
     }
 
     # check version
     my $version = `$REQ{MYSQL_CONFIG} --version`;
-    return soft_fail("Failed to find MysqlSQL version with ",
-                     "`$REQ{MYSQL_CONFIG} --version`.") unless $version;
+    return soft_fail(
+        "Failed to find MysqlSQL version with ",
+        "`$REQ{MYSQL_CONFIG} --version`."
+    ) unless $version;
     chomp $version;
     my ($x, $y, $z) = $version =~ /(\d+)\.(\d+)(?:\.(\d+))?/;
-    return soft_fail("Failed to parse Mysql client version from string ",
-                     "\"$version\".")
-        unless defined $x and defined $y;
+    return soft_fail(
+        qq{Failed to parse MySQL client version from string "$version".}
+    ) unless defined $x and defined $y;
     $z ||= 0;
-    return soft_fail("Found old version of Mysql client: $x.$y.$z - ",
-                     "4.1.0 or greater required.")
-        unless (($x > 4) or ($x == 4 and $y >= 1));
-    print "Found acceptable version of Mysql: $x.$y.$z.\n";
+    return soft_fail(
+        "Found old version of Mysql client: $x.$y.$z - 5.0.3 or greater required."
+    ) unless (
+           ($x > 5)
+        or ($x == 5 and $y >= 0)
+        or ($x == 5 and $y == 0 and $z >= 3)
+    );
+    print "Found acceptable version of MySQL: $x.$y.$z.\n";
 
     $REQ{MYSQL_CLIENT_VERSION} = [$x,$y,$z];
-
     return 1;
 }
 
@@ -226,21 +247,30 @@ sub find_apache {
     if ($REQ{APACHE_EXE}) {
         print "Found Apache 1.3 server binary at '$REQ{APACHE_EXE}'.\n";
         unless ($QUIET or ask_yesno("Is this correct?", 1)) {
-            ask_confirm("Enter path to Apache 1.3 server binary",
-                        \$REQ{APACHE_EXE});
+            ask_confirm(
+                "Enter path to Apache 1.3 server binary",
+                \$REQ{APACHE_EXE}
+            );
         }
     } else {
         print "Failed to find Apache server binary.\n";
-        if (ask_yesno("Do you want to provide a path to the Apache server " .
-                      "binary?", 0, $QUIET)) {
+        if (ask_yesno(
+            "Do you want to provide a path to the Apache server binary?",
+            0,
+            $QUIET
+        )) {
             $REQ{APACHE_EXE} = 'NONE';
-            ask_confirm("Enter path to Apache server binary",
-                        \$REQ{APACHE_EXE});
+            ask_confirm(
+                "Enter path to Apache server binary",
+                \$REQ{APACHE_EXE}
+            );
         } else {
-            return soft_fail("Failed to find Apache 1.3 executable. Looked for ",
-                             join(', ', @exe),
-                             " in:",
-                             map { "\n\t$_" } @paths);
+            return soft_fail(
+                "Failed to find Apache 1.3 executable. Looked for ",
+                join(', ', @exe),
+                " in:",
+                map { "\n\t$_" } @paths
+            );
         }
     }
 
@@ -248,20 +278,22 @@ sub find_apache {
 
     # check version
     my $version = `$REQ{APACHE_EXE} -v`;
-    return soft_fail("Failed to find Apache 1.3 version with ",
-                     "`$REQ{APACHE_EXE} -v`.") unless $version;
+    return soft_fail(
+        "Failed to find Apache 1.3 version with `$REQ{APACHE_EXE} -v`."
+    ) unless $version;
     chomp $version;
     my ($x, $y, $z) = $version =~ /(\d+)\.(\d+).(\d+)/;
-    return soft_fail("Failed to parse Apache 1.3 version from string ",
-                     "\"$version\".")
-        unless defined $x and defined $y and defined $z;
+    return soft_fail(
+        qq{Failed to parse Apache 1.3 version from string "$version".}
+    ) unless defined $x and defined $y and defined $z;
 
-    return soft_fail("Found unacceptable version of Apache: $x.$y.$z - ",
-                     "version >= 1.3.34 and < 2.0 required.")
-        unless (($x == 1 and $y == 3 and $z >= 12) or ($x == 1 and $y > 3));
+    return soft_fail(
+        "Found unacceptable version of Apache: $x.$y.$z - ",
+        'version >= 1.3.34 and < 2.0 required.'
+    ) unless (($x == 1 and $y == 3 and $z >= 12) or ($x == 1 and $y > 3));
+
     print "Found acceptable version of Apache: $x.$y.$z.\n";
     $REQ{APACHE_VERSION} = [$x,$y,$z];
-
     return 1;
 }
 
@@ -290,21 +322,30 @@ sub find_apache2 {
     if ($REQ{APACHE_EXE}) {
         print "Found Apache server binary at '$REQ{APACHE_EXE}'.\n";
         unless ($QUIET or ask_yesno("Is this correct?", 1)) {
-            ask_confirm("Enter path to Apache 2 server binary",
-                        \$REQ{APACHE_EXE});
+            ask_confirm(
+                'Enter path to Apache 2 server binary',
+                \$REQ{APACHE_EXE}
+            );
         }
     } else {
         print "Failed to find Apache 2 server binary.\n";
-        if (ask_yesno("Do you want to provide a path to the Apache 2 server " .
-                      "binary?", 0, $QUIET)) {
+        if (ask_yesno(
+            "Do you want to provide a path to the Apache 2 server binary?",
+            0,
+            $QUIET,
+        )) {
             $REQ{APACHE_EXE} = 'NONE';
-            ask_confirm("Enter path to Apache 2 server binary",
-                        \$REQ{APACHE_EXE});
+            ask_confirm(
+                "Enter path to Apache 2 server binary",
+                \$REQ{APACHE_EXE}
+            );
         } else {
-            return soft_fail("Failed to find Apache 2 executable. Looked for ",
-                             join(', ', @exe),
-                             " in:",
-                             map { "\n\t$_" } @paths);
+            return soft_fail(
+                "Failed to find Apache 2 executable. Looked for ",
+                join(', ', @exe),
+                " in:",
+                map { "\n\t$_" } @paths
+            );
         }
     }
 
@@ -312,20 +353,22 @@ sub find_apache2 {
 
     # check version
     my $version = `$REQ{APACHE_EXE} -v`;
-    return soft_fail("Failed to find Apache 2 version with ",
-                     "`$REQ{APACHE_EXE} -v`.") unless $version;
+    return soft_fail(
+        "Failed to find Apache 2 version with `$REQ{APACHE_EXE} -v`."
+    ) unless $version;
     chomp $version;
     my ($x, $y, $z) = $version =~ /(\d+)\.(\d+).(\d+)/;
-    return soft_fail("Failed to parse Apache 2 version from string ",
-                     "\"$version\".")
-        unless defined $x and defined $y and defined $z;
+    return soft_fail(
+        qq{Failed to parse Apache 2 version from string "$version".}
+    ) unless defined $x and defined $y and defined $z;
 
-    return soft_fail("Found unacceptable version of Apache: $x.$y.$z - ",
-                     "2.0.55 or greater required\n")
-        unless ($x == 2 and ($y > 0 or ($y == 0 and $z >= 51)));
+    return soft_fail(
+        "Found unacceptable version of Apache: $x.$y.$z - ",
+        "2.0.55 or greater required\n"
+    ) unless ($x == 2 and ($y > 0 or ($y == 0 and $z >= 51)));
+
     print "Found acceptable version of Apache: $x.$y.$z.\n";
     $REQ{APACHE_VERSION} = [$x,$y,$z];
-
     return 1;
 }
 
@@ -335,14 +378,16 @@ sub find_expat {
 
     # find expat libary libexpat.so by looking in library paths that
     # Perl knows about
-    my @paths = grep { defined and length } ( split(' ', $Config{libsdirs}),
-                                              split(' ', $Config{loclibpth}),
-                                              split(' ', $Config{loclibpth}));
-    push @paths, split(", ", get_default("EXPAT_PATH"));
+    my @paths = grep { defined and length } (
+        split(' ', $Config{libsdirs}),
+        split(' ', $Config{loclibpth}),
+        split(' ', $Config{loclibpth})
+    );
 
-    my @files = split(", ", get_default("EXPAT_FILE"));
+    push @paths, split(', ', get_default('EXPAT_PATH'));
+    my @files = split(', ', get_default('EXPAT_FILE'));
 
-  LOOK: foreach my $path (@paths) {
+    LOOK: foreach my $path (@paths) {
         foreach my $file(@files) {
             if (-e catfile($path, $file)) {
                 $REQ{EXPAT} = catfile($path, "libexpat.so");
@@ -350,12 +395,13 @@ sub find_expat {
             }
         }
     }
-    return soft_fail("Failed to find libexpat.so. Looked in:",
-                     map { "\n\t$_" } @paths) unless $REQ{EXPAT};
+    return soft_fail(
+        "Failed to find libexpat.so. Looked in:",
+        map { "\n\t$_" } @paths
+    ) unless $REQ{EXPAT};
     print "Found expat at $REQ{EXPAT}.\n";
 
     # I should check that expat is >= 1.95.0.  Um, how do I do that?
-
     return 1;
 }
 
